--- a/estilos/style.css
+++ b/estilos/style.css
@@ -43,6 +43,9 @@ section#login {
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.274);
+
+    transition: width .3s, heigtj .3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
