--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -47,7 +47,7 @@
     }
 
     section#login > div#imagem {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
@@ -55,6 +55,16 @@
     section#login > div#formulario {
         float: left;
         width: 50%;
+    }
+
+    div#formulario > h1 {
+        div#formulario > p {
+            font-size: 2em;
+        }
+    }
+
+    div#formulario > p {
+        font-size: 1.2em;
     }
     
 }
