--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -12,7 +12,7 @@
 
 */
 
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 768px) and (max-width: 992px) { /*conf tablet*/
 
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
@@ -20,6 +20,7 @@
 
     section#login {
         width: 80vw;
+        height: 280px;
     }
 
     section#login > div#imagem {
@@ -36,14 +37,16 @@
     
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 992px) { /*Conf Desktop*/
 
     body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
+
     }
 
     section#login {
         width: 990px;
+        height: 350px;
     }
 
     section#login > div#imagem {
@@ -64,7 +67,8 @@
     }
 
     div#formulario > p {
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 20px 0px;
     }
     
 }
