--- a/estilos/style.css
+++ b/estilos/style.css
@@ -35,7 +35,7 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    
     overflow: hidden;
 
     background-color: white;
@@ -44,8 +44,10 @@ section#login {
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.274);
 
+    transform: translate(-50%, -50%);
     transition: width .3s, heigtj .3s;
     transition-timing-function: ease;
+    
 }
 
 section#login > div#imagem {
@@ -77,6 +79,7 @@ div#formulario > p {
 
 form > div.campo {
     background-color: #5f2c82;
+    border: 2px solid #5f2c82;
     display: block;
     width: 100%;
     height: 40px;
@@ -84,8 +87,34 @@ form > div.campo {
     margin:  5px 0px;
 
 }
-div.campo label {
+
+div.campo > label {
     display: none;
+}
+
+div.campo > i {
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+
+}
+
+div.campo > input {
+    background-color: #a8f5f29a;
+    font-size: 1em;
+    width: calc(100% - 44.5px);
+    height: 100%;
+    border: 0px;
+    border-radius: 10px;
+    padding: 4px;
+    transform: translateY(-12px);
+
+}
+
+div.campo > input:focus-within {
+    background-color: white;
+    border: none;
 }
 
 form > input[type=submit] {
